tests/NormalTests/paczka1/fuzzy1/61168136.err
Error in line 3: DQLZHw6tY A580 16,6
Error in line 12: b3A1fI A101 15,4
Error in line 20: anwkm A580 24,92
Error in line 22: anwkm A580 9,7
Error in line 31: DQLZHw6tY A101 86,3
